# labelCloud

./: .gitignore  404.html  LICENSE  README.md  config.ini  index.html  labelCloud.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yaml  integration-tests.yml  python-publish.yml  unit-tests.yml
assets/: extra.css
configuration/: index.html
conventions/: index.html
docs/: configuration.md  conventions.md  documentation.md  index.md  setup.md  shortcuts.md  tutorials.md
labelCloud/: __main__.py  app.py
labelCloud/control/: alignmode.py  bbox_controler.py  bbox_controller.py  config_manager.py  config_parser.py  controler.py  controller.py  drawing_manager.py  drawing_strategies.py  label_manager.py  pcd_manager.py
labelCloud/definitions/: __init__.py  bbox.py  colors.py  context.py  labeling_mode.py  mode.py  types.py
labelCloud/definitions/label_formats/: __init__.py  base.py  object_detection.py  semantic_segmentation.py
labelCloud/io/: __init__.py
labelCloud/io/labels/: __init__.py  base.py  centroid.py  config.py  exceptions.py  kitti.py  vertices.py
labelCloud/io/pointclouds/: __init__.py  base.py  numpy.py  open3d.py
labelCloud/io/segmentations/: __init__.py  base.py  numpy.py
labelCloud/label_formats/: __init__.py  base.py  centroid_format.py  kitti_format.py  vertices_format.py
labelCloud/labeling_strategies/: __init__.py  base.py  picking.py  spanning.py
labelCloud/model/: __init__.py  bbox.py  perspective.py  point_cloud.py
labelCloud/resources/: default_classes.json  default_config.ini  rocket-palette.txt
labelCloud/resources/examples/: exemplary.json  exemplary.ply
labelCloud/resources/icons/: ICON_LICENSES.txt
labelCloud/resources/interfaces/: interface.ui  settings_interface.ui
labelCloud/ressources/: default_config.ini  interface.ui  labelCloud_icon.pcd  settings_interface.ui
labelCloud/ressources/interfaces/: interface.ui  settings_interface.ui
labelCloud/tests/integration/: conftest.py  test_gui.py  test_labeling.py
labelCloud/tests/unit/: conftest.py  test_color.py  test_label_export.py  test_label_import.py
labelCloud/tests/unit/segmentation_handler/: test_base_segmentation_handler.py  test_numpy_segmentation_handler.py
labelCloud/utils/: __init__.py  color.py  logger.py  math3d.py  oglhelper.py  singleton.py  validation.py
labelCloud/view/: color_button.py  gui.py  point_cloud_index_selector.py  settings_dialog.py  startup_dialog.py  status_manager.py  viewer.py
labelCloud/view/startup/: class_list.py  color_button.py  dialog.py  labeling_mode.py
labels/: _classes.json  exemplary.json
labels/schema/: label_definition.json
labels/segmentation/schema/: label_definition.json
modules/: math3d.py  oglhelper.py
modules/control/: alignmode.py  bbox_controler.py  config_parser.py  controler.py  drawing_manager.py  drawing_mode.py  label_manager.py  pcd_controler.py  pcd_manager.py
modules/model/: bbox.py  point_cloud.py
modules/view/: gui.py  viewer.py
ressources/: interface.ui
search/: search_index.json
setup/: index.html
shortcuts/: index.html
tests/: preparation.py  test_application.py  test_export.py  test_gui.py  test_label_export.py  test_label_import.py
tests/integration/: conftest.py  test_gui.py  test_labeling.py
tests/unit/: conftest.py  test_label_export.py  test_label_import.py
tutorials/: index.html
