[metadata]
name = labelCloud
version = attr: labelCloud.__version__
maintainer = Christoph Sager
maintainer_email = christoph.sager@gmail.com
license = GNU General Public License v3.0
description = A lightweight tool for labeling 3D bounding boxes in point clouds.
keywords =
    labelCloud
    machine learning
    computer vision
    annotation tool
    labeling
    point clouds
    bounding boxes
    3d object detection
    6d pose estimation
url = https://github.com/ch-sa/labelCloud
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Multimedia :: Graphics :: Viewers

[options]
packages =
    labelCloud
    labelCloud.control
    labelCloud.definitions
    labelCloud.label_formats
    labelCloud.labeling_strategies
    labelCloud.model
    labelCloud.ressources.icons
    labelCloud.ressources.interfaces
    labelCloud.ressources
    labelCloud.tests
    labelCloud.utils
    labelCloud.view
zip_safe = False
install_requires =
    numpy
    open3d
    PyOpenGL
    PyQt5 <= 5.14.1;platform_system=='Windows'
    PyQt5;platform_system!='Windows'
python_requires = >=3.6

[options.entry_points]
console_scripts =
    labelCloud = labelCloud.__main__:main

[options.extras_require]
tests = pytest; pytest-qt

[options.package_data]
labelcloud.ressources = *
labelcloud.ressources.icons = *
labelcloud.ressources.interfaces = *
