[metadata]
name = labelCloud
version = attr: labelCloud.__init__.__version__
maintainer = Christoph Sager
maintainer_email = christoph.sager@gmail.com
license = GNU General Public License v3.0
description = A lightweight tool for labeling 3D bounding boxes in point clouds.
keywords =
    labelCloud
    machine learning
    computer vision
    annotation tool
    labeling
    point clouds
    bounding boxes
    3d object detection
    6d pose estimation
url = https://github.com/ch-sa/labelCloud
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Multimedia :: Graphics :: Viewers

[options]
zip_safe = False
packages =
    labelCloud
    labelCloud.control
    labelCloud.definitions
    labelCloud.definitions.label_formats
    labelCloud.io
    labelCloud.io.labels
    labelCloud.io.pointclouds
    labelCloud.io.segmentations
    labelCloud.labeling_strategies
    labelCloud.model
    labelCloud.resources
    labelCloud.resources.examples
    labelCloud.resources.icons
    labelCloud.resources.interfaces
    labelCloud.tests
    labelCloud.utils
    labelCloud.view
    labelCloud.view.startup
install_requires =
    numpy>1.20.0
    open3d
    PyOpenGL
    PyOpenGL-accelerate
    PyQt5>=5.15.7 
python_requires = >=3.7

[options.entry_points]
console_scripts =
    labelCloud = labelCloud.__main__:main

[options.extras_require]
tests = pytest; pytest-qt

[options.package_data]
labelCloud.resources = *.ini, *.pcd, *.txt, *.json
labelCloud.resources.examples = *.json, *.ply
labelCloud.resources.icons = *.ico, *.png, *.svg, *.txt
labelCloud.resources.interfaces = *.ui
